--- a/manifest.json
+++ b/manifest.json
@@ -22,7 +22,7 @@
     },
     "web_accessible_resources": [
         {
-            "resources": ["blocked.html"],
+            "resources": ["blocked.html","click.mp3"],
             "matches": ["<all_urls>"]
         }
     ],
